@@ -1,5 +1,7 @@
 3.4.4
 - Zend Framework was updated to 1.9.6
+- P4A_Data_Source::exportToCSV() method was marked as deprecated
+- P4A_Data_Source::exportAsCSV() now can be called directly from an event handler
 
 3.4.3
 - Zend Framework was updated to 1.9.5
